# codev-agent-sdk

./: AGENTS.md  DEVELOPMENT.md  MANIFEST.in  pyproject.toml
.github/prompts/: update-documentation.md
.github/run-eval/: resolve_model_config.py
.github/workflows/: agent-server-rest-api-breakage.yml  api-breakage.yml  api-compliance-runner.yml  assign-reviews.yml  auto-label-issues.yml  check-docstrings.yml  check-documented-examples.yml  check-duplicate-examples.yml  condenser-runner.yml  create-release.yml  deploy-docs.yml  deprecation-check.yml  integration-runner.yml  issue-duplicate-checker.yml  oh-update-documentation.yml.back  persisted-settings-compat.yml  pr-artifacts.yml  pr-description-check.yml  precommit.yml  prepare-release.yml  pypi-release.yml  qa-changes-by-openhands.yml  qa-changes-evaluation.yml  release-binaries.yml  review-thread-gate.yml  run-eval.yml  run-examples.yml  server.yml  stale.yml  tests.yml  todo-management.yml  version-bump-guard.yml  version-bump-prs.yml
examples/01_standalone_sdk/: 03_activate_skill.py  34_critic_example.py  38_browser_session_recording.py  49_switch_llm_tool.py
examples/02_remote_agent_server/: 02_convo_with_docker_sandboxed_server.py  03_browser_use_with_docker_sandboxed_server.py  04_convo_with_api_sandboxed_server.py  (+5 more)
openhands-agent-server/: pyproject.toml
openhands-agent-server/openhands/agent_server/: agent-server.spec  cloud_proxy_router.py  conversation_service.py  event_service.py  git_router.py  hooks_router.py  hooks_service.py  skills_router.py  skills_service.py
openhands-agent-server/openhands/agent_server/docker/: Dockerfile  build.py
openhands-agent-server/openhands/agent_server/docker/opencode-plugin/tool/: task.js
openhands-agent-server/openhands/agent_server/openai/: service.py
openhands-agent-server/openhands/agent_server/persistence/: store.py
openhands-sdk/: pyproject.toml
openhands-sdk/openhands/sdk/: AGENTS.md  __init__.py  banner.py
openhands-sdk/openhands/sdk/agent/: __init__.py  acp_agent.py  agent.py  base.py  opencode_agent.py  utils.py
openhands-sdk/openhands/sdk/agent/prompts/: codegraph_exploration.j2  codegraph_navigation.j2  self_documentation.j2  system_prompt.j2  system_prompt_planning.j2
openhands-sdk/openhands/sdk/context/: agent_context.py
openhands-sdk/openhands/sdk/context/prompts/: prompt.py
openhands-sdk/openhands/sdk/context/prompts/templates/: system_message_suffix.j2
openhands-sdk/openhands/sdk/conversation/: request.py  state.py  title_utils.py
openhands-sdk/openhands/sdk/conversation/impl/: local_conversation.py  remote_conversation.py
openhands-sdk/openhands/sdk/critic/impl/api/: client.py
openhands-sdk/openhands/sdk/event/: acp_tool_call.py
openhands-sdk/openhands/sdk/extensions/installation/: manager.py
openhands-sdk/openhands/sdk/hooks/: config.py
openhands-sdk/openhands/sdk/llm/: fallback_strategy.py  llm.py  llm_profile_store.py
openhands-sdk/openhands/sdk/llm/auth/: credentials.py  openai.py
openhands-sdk/openhands/sdk/llm/exceptions/: types.py
openhands-sdk/openhands/sdk/llm/utils/: openhands_provider.py
openhands-sdk/openhands/sdk/plugin/: __init__.py  fetch.py  installed.py  plugin.py  source.py
openhands-sdk/openhands/sdk/settings/: __init__.py  acp_providers.py  model.py
openhands-sdk/openhands/sdk/skills/: __init__.py  fetch.py  installed.py  skill.py  utils.py
openhands-sdk/openhands/sdk/subagent/: load.py  registry.py
openhands-sdk/openhands/sdk/utils/: __init__.py  github.py  path.py  redact.py
openhands-sdk/openhands/sdk/workspace/remote/: base.py
openhands-tools/: pyproject.toml
openhands-tools/openhands/tools/codegraph/: README.md  __init__.py  bootstrap.py  config.py  definition.py  impl.py  navigation_common.py  navigation_find_references.py  navigation_go_to_definition.py  navigation_list_callees.py  navigation_list_callers.py  runner.py
openhands-tools/openhands/tools/preset/: default.py  planning.py
openhands-tools/openhands/tools/preset/subagents/: code_explorer.md
openhands-tools/openhands/tools/task/: definition.py  manager.py
openhands-tools/openhands/tools/workflow/: impl.py
openhands-workspace/: pyproject.toml
openhands-workspace/openhands/workspace/apptainer/: workspace.py
openhands-workspace/openhands/workspace/cloud/: workspace.py
openhands-workspace/openhands/workspace/docker/: dev_workspace.py  workspace.py
openhands-workspace/openhands/workspace/remote_api/: workspace.py
scripts/: issue_duplicate_check_openhands.py  render_examples_report.py
(+48 files in other folders)
