[project]
name = "openhands-workspace"
version = "1.28.0+z8l.2"
description = "OpenHands Workspace - Docker and container-based workspace implementations"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",
    "openhands-agent-server",
    "pydantic>=2.11.7",
]

[project.urls]
Source = "https://github.com/zen8labs/codev-agent-sdk"
Homepage = "https://github.com/zen8labs/codev-agent-sdk"
Documentation = "https://docs.z8l-agent.dev/sdk"
"Bug Tracker" = "https://github.com/zen8labs/codev-agent-sdk/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.workspace*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
